complete markup with css button padding

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,21 +35,68 @@
     <!-- Timeblocks go inside container -->
     <div class="container">
       <div class="row">
-        <div class="col">
-          1 of 12
+        <div class="col-2">
+        <ul class="list-inline text-center align-items-center">
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">9am</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">10am</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">11am</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">12pm</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">1pm</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">2pm</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">3pm</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">4pm</button></li>
+          <li class="align-middle"><button class="btn btn-outline-info btn-lg btn-block">5pm</button></li>
+        </ul>
         </div>
-        <div class="col-6" id="description">
+        <div class="col-8">
+          <ul class="list-inline text-center align-items-center">
+            <input type="event" class="form-control" id="userInfo-9" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-10" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-11" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-12" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-13" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-14" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-15" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-16" aria-describedby="eventHelp"
+              placeholder="New Event">
+            <input type="event" class="form-control" id="userInfo-17" aria-describedby="eventHelp"
+              placeholder="New Event">
+          </ul>
+        </div>
+        <div class="col-2">
+          <ul class="list-inline text-center align-items-center">
+            <li class="align-middle"><button id="save-9" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-10" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-11" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-12" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-13" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-14" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-15" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-16" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+            <li class="align-middle"><button id="save-17" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
+          </ul>
+        </div>
+      </div>
+          <!-- Or should I use text areas? 
+        </div>
+        <div class="col-8" id="description">
               <div class="textarea">
                 <label for="exampleFormControlTextarea1"></label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
             </form>
         </div>
-        <div class="col">
-          <button type="button" class="btn btn-info" id="saveBtn">Save</button>
-        </div>
-      </div>
-    </div>
+          <ul class="list-inline text-center align-items-center">
+            <li class="align-middle"><button id="saveBtn" class="btn btn-info btn-lg btn-block save-btn">Save</button></li>
+         <div class="col-2">
+          <button type="button" class="btn btn-info" id="saveBtn">Save</button> -->
     <!-- jQuery begins here -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js">
     $
