--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,7 +33,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <!-- Timeblocks go inside container -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col-2">
         <ul class="list-inline text-center align-items-center">
@@ -83,7 +83,84 @@
             <li class="align-middle"><button id="save-17" class="btn btn-info btn-lg btn-block save-btn"><i class="fa fa-briefcase"></i></button></li>
           </ul>
         </div>
-      </div>
+      </div> -->
+
+<div class="container">
+  <div id="hour-9" class="row time-block">
+    <div class="col-md-1 hour">
+      9AM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+    <div id="hour-10" class="row time-block">
+      <div class="col-md-1 hour">
+      10AM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+  <div id="hour-11" class="row time-block">
+    <div class="col-md-1 hour">
+      11AM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-12" class="row time-block">
+    <div class="col-md-1 hour">
+      12AM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-13" class="row time-block">
+    <div class="col-md-1 hour">
+      1PM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-14" class="row time-block">
+    <div class="col-md-1 hour">
+      2PM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-15" class="row time-block">
+    <div class="col-md-1 hour">
+      3PM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-16" class="row time-block">
+    <div class="col-md-1 hour">
+      4PM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+  <div id="hour-17" class="row time-block">
+    <div class="col-md-1 hour">
+      5PM
+    </div>
+    <textarea class="col-md-10 description">
+      </textarea>
+    <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+  </div>
+
+
+</div>
           <!-- Or should I use text areas? 
         </div>
         <div class="col-8" id="description">
@@ -97,10 +174,16 @@
             <li class="align-middle"><button id="saveBtn" class="btn btn-info btn-lg btn-block save-btn">Save</button></li>
          <div class="col-2">
           <button type="button" class="btn btn-info" id="saveBtn">Save</button> -->
+
+
+
     <!-- jQuery begins here -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js">
-    $
-    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+
+
+
+<script src="script.js"></script>
+    
+</body>
 </html>
